#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl_hdf2psana
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-23
2013-03-27 Andy Salnikov
- fix for cspad2x2 schema

Tag: V00-01-22
2013-03-27 Andy Salnikov
- a bit of refactoring/renaming, no code changes

Tag: V00-01-21
2013-03-26 Andy Salnikov
- fix to cspad schema

Tag: V00-01-20
2013-03-26 Andy Salnikov
- checking Evr mess: in Nov 2012 translator changed silently dataset name
  where EvrDataV3 data is stored (this happend during one big refactoring,
  the change was not intentional)
- as a result we now have EvrDataV3 which can be stored in "evrData" 
  or "data" dataset depending when transtion happened
- replacing generated EvrDataV3 code here with hand-written (adopted from 
  generated) which checks dataset name before reading the data from it

Tag: V00-01-19
2013-03-25 Andy Salnikov
- fix camera frame image reading

Tag: V00-01-18
2013-03-25 Andy Salnikov
- fixing image joining in PNCCD::FullFrame

Tag: V00-01-17
2013-03-25 Andy Salnikov
- regenerate whole thing from psddldata V00-04-21

Tag: V00-01-16
2013-03-25 Andy Salnikov
- fixing princeton schema

Tag: V00-01-15
2013-03-25 Andy Salnikov
- fix Timepix schema for config types

Tag: V00-01-14
2013-03-24 Andy Salnikov
- use new psddlc feature to remap enum constant names ito names used 
  by HDF5 translator

Tag: V00-01-13
2013-03-23 Andy Salnikov
- fix ControlData schema

Tag: V00-01-12
2013-03-23 Andy Salnikov
- fix FCCD schema

Tag: V00-01-11
2013-03-22 Andy Salnikov
- fix Fli schema

Tag: V00-01-10
2013-03-22 Andy Salnikov
- regenerate whole thing from psddldata V00-04-17
- use new enum-base feature to avoid specification of attribute type

Tag: V00-01-09
2013-03-22 Andy Salnikov